# specio3

./: .codecov.yml  .gitignore  README.md  SECURITY_AUDIT.md  benchmark.py  benchmark_comparison.py  pyproject.toml  scripts.py  security_fixes.patch  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  format_support.md
.github/workflows/: ci-cd.yml
scripts/: benchmark.py  benchmark_comparison.py
specio3/: CMakeLists.txt  __init__.py  __main__.py  __spc_reader.py  bindings.cpp  spc_reader.cpp  spc_reader.h  spc_reader_secure.cpp
tests/: spc_reader_test.py
tests/data/: 022b4asf.spc  040b4ana.spc  040b4anb.spc  040b4and.spc  040b4ane.spc  044b4ane.spc  044b4anf.spc  059b4anb.spc  059b4anc.spc  059b4and.spc  059b4ane.spc  065b4asb.spc  072a4src.spc  081b4ssc.spc  087b4ana.spc  097b4asc.spc  103b4ane.spc  103b4anf.spc  103b4ang.spc  103b4anh.spc  140b4anc.spc  161b4ana.spc  161b4anb.spc  172a4srd.spc  174a4asc.spc  174a4asd.spc  174a4sss.spc  174a4sst.spc  193b4a_d.spc  194b4axb.spc  194b4axd.spc  195b4a_a.spc  196b4a_e.spc  197b4a_b.spc  cts0121b.spc  cts0217a.spc  cts0316b.spc  cts0318b.spc  cts0325a.spc  cts0326a.spc  (+3 more)
