[project]
name = "specio3"
version = "0.1.0"
description = "Spectral File Serializer"
authors = [
    { name = "William Callahan", email = "willcallahan94@att.net" }
]
license = "MIT"  # Replace with your actual license type (e.g., MIT, Apache-2.0, etc.)
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0"
]

[tool.poetry]
packages = [
    { include = "specio3" }
]

[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"
pybind11 = "^3.0.0"
pytest = "^8.0.0"
pytest-cov = "^6.2.1"
black = "^25.1.0"

[tool.poetry.scripts]
clean = "scripts:clean"
build = "scripts:build"
rebuild = "scripts:rebuild"
test = "scripts:test"
coverage = "scripts:coverage"
format = "scripts:format"
lint = "scripts:lint"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["specio3"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "scripts.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "pass",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
